--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "moment": "^2.24.0",
     "nuxt": "^2.4.0",
     "papaparse": "^4.6.3",
-    "select2": "^4.0.7-rc.0",
     "underscore": "^1.9.1",
-    "underscore.string": "^3.3.5"
+    "underscore.string": "^3.3.5",
+    "vue-select": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
