--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
     "bootstrap-vue": "^2.0.0-rc.19",
-    "chartjs": "^0.3.24",
+    "chart.js": "^2.8.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "jquery": "^3.4.1",
     "moment": "^2.24.0",
+    "numeral": "^2.0.6",
     "nuxt": "^2.4.0",
     "papaparse": "^4.6.3",
     "underscore": "^1.9.1",
-    "underscore.string": "^3.3.5",
+    "vue-chartjs": "^3.4.2",
     "vue-select": "^3.1.0",
     "vuejs-datepicker": "^1.5.4"
   },
