--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
+    "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.0-rc.19",
     "chart.js": "^2.8.0",
     "cross-env": "^5.2.0",
