--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Andrey Khataev (khataev@yandex.ru)",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "cross-env NODE_ENV=development nodemon --require dotenv/config server/index.js --watch server",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
@@ -24,7 +24,7 @@
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "numeral": "^2.0.6",
-    "nuxt": "^2.4.0",
+    "nuxt": "^2.8.1",
     "papaparse": "^4.6.3",
     "underscore": "^1.9.1",
     "vue-chartjs": "^3.4.2",
@@ -32,21 +32,22 @@
     "vuejs-datepicker": "^1.5.4"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9",
     "@nuxtjs/eslint-config": "^0.0.1",
     "babel-eslint": "^10.0.1",
+    "dotenv": "^8.0.0",
     "eslint": "^5.15.1",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-config-standard": ">=12.0.0",
+    "eslint-loader": "^2.1.2",
     "eslint-plugin-import": ">=2.16.0",
     "eslint-plugin-jest": ">=22.3.0",
     "eslint-plugin-node": ">=8.0.1",
     "eslint-plugin-nuxt": ">=0.4.2",
+    "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-promise": ">=4.0.1",
     "eslint-plugin-standard": ">=4.0.0",
-    "eslint-loader": "^2.1.2",
     "eslint-plugin-vue": "^5.2.2",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-prettier": "^3.0.1",
+    "nodemon": "^1.18.9",
     "prettier": "^1.16.4"
   }
 }
