--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Andrey Khataev (khataev@yandex.ru)",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon --require dotenv/config server/index.js --watch server",
+    "dev": "cross-env NODE_ENV=development PORT=8000 nodemon --require dotenv/config server/index.js --watch server",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
@@ -19,6 +19,7 @@
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.0-rc.19",
     "chart.js": "^2.8.0",
+    "consola": "^2.9.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "jquery": "^3.4.1",
