--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Andrey Khataev (khataev@yandex.ru)",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development PORT=8000 nodemon --require dotenv/config server/index.js --watch server",
+    "dev": "cross-env NODE_ENV=development nodemon --require dotenv/config server/index.js --watch server",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
