--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon --require dotenv/config server/index.js --watch server",
     "build": "nuxt build",
+    "build:local": ". ./prod_envs.sh && nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
+    "start:local": ". ./prod_envs.sh && cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
