--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap-vue": "^2.0.0-rc.19",
     "chart.js": "^2.8.0",
     "consola": "^2.9.0",
+    "cors": "^2.8.5",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "jquery": "^3.4.1",
