--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "micexopen",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "title": "Открытые позиции на ММВБ. Удобный просмотр и визуализация",
   "description": "Просмотр и анализ открытых позиций по производным финансовым инструментам на ММВБ в наглядном графическом представлении",
   "author": "Andrey Khataev (khataev@yandex.ru)",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "cross-env NODE_ENV=development nodemon --require dotenv/config server/index.js --watch server",
     "build": "nuxt build",
+    "build:local": ". ./prod_envs.sh && nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
+    "start:local": ". ./prod_envs.sh && cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
@@ -16,34 +18,41 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
-    "bootstrap-datepicker": "^1.8.0",
+    "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.0-rc.19",
-    "chartjs": "^0.3.24",
+    "chart.js": "^2.8.0",
+    "consola": "^2.9.0",
+    "cors": "^2.8.5",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "jquery": "^3.4.1",
     "moment": "^2.24.0",
-    "nuxt": "^2.4.0",
+    "numeral": "^2.0.6",
+    "nuxt": "^2.8.1",
     "papaparse": "^4.6.3",
-    "select2": "^4.0.7-rc.0",
+    "qs": "^6.7.0",
     "underscore": "^1.9.1",
-    "underscore.string": "^3.3.5"
+    "vue-chartjs": "^3.4.2",
+    "vue-select": "^3.1.0",
+    "vuejs-datepicker": "^1.5.4"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9",
     "@nuxtjs/eslint-config": "^0.0.1",
     "babel-eslint": "^10.0.1",
+    "dotenv": "^8.0.0",
     "eslint": "^5.15.1",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-config-standard": ">=12.0.0",
+    "eslint-loader": "^2.1.2",
     "eslint-plugin-import": ">=2.16.0",
     "eslint-plugin-jest": ">=22.3.0",
     "eslint-plugin-node": ">=8.0.1",
     "eslint-plugin-nuxt": ">=0.4.2",
+    "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-promise": ">=4.0.1",
     "eslint-plugin-standard": ">=4.0.0",
-    "eslint-loader": "^2.1.2",
     "eslint-plugin-vue": "^5.2.2",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-prettier": "^3.0.1",
+    "nodemon": "^1.18.9",
     "prettier": "^1.16.4"
   }
 }
